--- a/WebContent/css/board/board.css
+++ b/WebContent/css/board/board.css
@@ -3,17 +3,19 @@
    border : solid 0px blue;
    width: 600px;
    margin: 200px auto;
+   oveflow: hidden;
 }
 
-#power div {
-   border: solid 2px;
-   border-bottom:0px;
-      vertical-align: middle;
-}
 
 #power .bottom {
    border-bottom:solid 2px;
    text-align:center;
+}
+
+#power div {
+   border: solid 1px;
+   border:5px;
+   vertical-align: middle;   
 }
 
 #power .six {
@@ -22,6 +24,7 @@
    width: 100px; height:30px;
    padding-bottom:2px;
    text-align:center;
+   height: 30px;
 }
 #power input, #power textarea {
    margin:5px;
