--- a/WebContent/css/board/board.css
+++ b/WebContent/css/board/board.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 #power {
-   border : solid 0px blue;
+   border : solid 1px black;
    width: 600px;
    margin: 200px auto;
    oveflow: hidden;
@@ -12,9 +12,9 @@
    text-align:center;
 }
 
-#power div {
-   border: solid 1px;
-   border:5px;
+#power > div {
+   border: solid 1px black;
+   overflow: hidden;
    vertical-align: middle;   
 }
 
@@ -22,9 +22,7 @@
    border-right: solid 2px;
    float:left;
    width: 100px; height:30px;
-   padding-bottom:2px;
-   text-align:center;
-   height: 30px;
+   
 }
 #power input, #power textarea {
    margin:5px;
@@ -35,3 +33,9 @@
    border: 0px;
 }
 a { text-decoration:none }
+
+#power > form > div {
+   border: solid 1px black;   
+   vertical-align: middle;
+   overflow: hidden;   
+} 
